# python-poetry-docker

./: .gitignore  Dockerfile  README.md  pyproject.toml
tests/python_poetry_docker/: ppd_test.py
